# kinova-movo

./: README.md
movo_7dof_moveit_config/config/: movo_kg3.srdf  movo_mixed_kg3_r85.srdf
movo_7dof_moveit_config/launch/: moveit.rviz
movo_common/movo_description/urdf/: movo.urdf.xacro
movo_demos/: CMakeLists.txt  package.xml  setup.py
movo_demos/config/2d_nav/: eband_planner_params.yaml
movo_demos/config/posture/: approach_planner.yaml  pregrasp_motion.yaml
movo_demos/launch/nav/: rtabmap_slam.launch
movo_demos/launch/obj_detect/: aruco_detect.launch  aruco_multiple.launch  aruco_single.launch
movo_demos/launch/pick_place/: pick_place.launch  pick_place_preprocessing.launch  sim_pick_place.launch
movo_demos/launch/sim/: sim_rtabmap_slam.launch
movo_demos/scripts/: moveit_reaching_goal_pose_test.py  movo_class.py  pick_init.py  pick_place_demo.py  sim_motion_test.py  sim_moveit_pick_place.py
movo_demos/scripts/moveit_utils/: sim_planning.py
movo_demos/scripts/utils/: sim_action.py  sim_motion.py
movo_desktop/movo_viz/rviz/: robot_7dof_.rviz  robot_7dof_pick_place.rviz
movo_pc_setup/: README.md
movo_pc_setup/config/: bash_rc_partial
movo_robot/movo_bringup/launch/: movo_system_local.launch
movo_simulation/movo_gazebo/launch/: movo_empty_world.launch  movo_pick_place.launch  movo_test_zone.launch
movo_simulation/movo_gazebo/worlds/: test_zone_pick_place.sdf
movo_tutorials/movo_moveit_test/: CMakeLists.txt  package.xml
movo_tutorials/movo_pick_and_place/: CMakeLists.txt  package.xml
movo_tutorials/movo_pick_place/: CMakeLists.txt  package.xml
movo_tutorials/movo_pick_place/cfg/: SphericalGrasp.cfg
movo_tutorials/movo_pick_place/config/: approach_planner.yaml  movo_grasp_data.yaml  pick_and_place_params.yaml  pick_motions.yaml  pregrasp_motion.yaml
movo_tutorials/movo_pick_place/config/rviz/: movo_pick_place.rviz
movo_tutorials/movo_pick_place/launch/: load_movo.launch  pick_place.launch  pick_place_simulation.launch  rviz.launch
movo_tutorials/movo_pick_place/scripts/: init_robot.py  pick_and_place.py  pick_and_place_server.py  pick_client.py  spherical_grasps_server.py
(+26 files in other folders)
